// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkImage should accept userland className 1`] = `
<DocumentFragment>
  <div
    class="userland-classname"
    style="width: .25rem;"
  >
    <div
      class="bpk-image bpk-image--no-background"
      style="height: 0px; padding-bottom: 66.66666666666667%;"
    >
      <img
        alt="image description"
        class="bpk-image__img"
        src="./path/to/image.jpg"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkImage should accept userland styling 1`] = `
<DocumentFragment>
  <div
    style="width: .25rem;"
  >
    <div
      class="bpk-image bpk-image--no-background"
      style="height: 0px; padding-bottom: 66.66666666666667%;"
    >
      <img
        alt="image description"
        class="bpk-image__img"
        src="./path/to/image.jpg"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkImage should apply borderRadius 1`] = `
<DocumentFragment>
  <div>
    <div
      class="bpk-image bpk-image--no-background bpk-image--border-radius-sm"
      style="height: 0px; padding-bottom: 66.66666666666667%;"
    >
      <img
        alt="image description"
        class="bpk-image__img"
        src="./path/to/image.jpg"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkImage should call onLoadCallback 1`] = `
<img
  alt="image description"
  className="bpk-image__img"
  onLoad={[Function]}
  src="./path/to/image.jpg"
  suppressHydrationWarning={false}
/>
`;

exports[`BpkImage should have !inView behavior 1`] = `
<DocumentFragment>
  <div>
    <div
      class="bpk-image bpk-image--no-background"
      style="height: 0px; padding-bottom: 66.66666666666667%;"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkImage should have loading behavior 1`] = `
<DocumentFragment>
  <div>
    <div
      class="bpk-image"
      style="height: 0px; padding-bottom: 66.66666666666667%;"
    >
      <img
        alt="image description"
        class="bpk-image__img bpk-image__img--hidden"
        src="./path/to/image.jpg"
      />
      <div
        class="bpk-image__spinner"
      >
        <svg
          class="bpk-spinner bpk-spinner--dark"
          height="18"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="2"
            opacity=".45"
            rx="1"
            width="4"
            x="1"
            y="8"
          />
          <rect
            height="2"
            rx="1"
            width="4"
            x="13"
            y="8"
          />
          <rect
            height="2"
            opacity=".3"
            rx="1"
            transform="rotate(-90 8 17)"
            width="4"
            x="8"
            y="17"
          />
          <rect
            height="2"
            opacity=".65"
            rx="1"
            transform="rotate(-90 8 5)"
            width="4"
            x="8"
            y="5"
          />
          <rect
            height="2"
            opacity=".25"
            rx="1"
            transform="rotate(-120 12.134 16.428)"
            width="4"
            x="12.134"
            y="16.428"
          />
          <rect
            height="2"
            opacity=".55"
            rx="1"
            transform="rotate(-120 6.134 6.036)"
            width="4"
            x="6.134"
            y="6.036"
          />
          <rect
            height="2"
            opacity=".2"
            rx="1"
            transform="rotate(-150 15.428 13.866)"
            width="4"
            x="15.428"
            y="13.866"
          />
          <rect
            height="2"
            opacity=".5"
            rx="1"
            transform="rotate(-150 5.036 7.866)"
            width="4"
            x="5.036"
            y="7.866"
          />
          <rect
            height="2"
            opacity=".85"
            rx="1"
            transform="rotate(150 16.428 5.866)"
            width="4"
            x="16.428"
            y="5.866"
          />
          <rect
            height="2"
            opacity=".4"
            rx="1"
            transform="rotate(150 6.036 11.866)"
            width="4"
            x="6.036"
            y="11.866"
          />
          <rect
            height="2"
            opacity=".75"
            rx="1"
            transform="rotate(120 13.866 2.572)"
            width="4"
            x="13.866"
            y="2.572"
          />
          <rect
            height="2"
            opacity=".35"
            rx="1"
            transform="rotate(120 7.866 12.964)"
            width="4"
            x="7.866"
            y="12.964"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkImage should load even without onLoadCallback 1`] = `
<img
  alt="image description"
  className="bpk-image__img"
  onLoad={[Function]}
  src="./path/to/image.jpg"
  suppressHydrationWarning={false}
/>
`;

exports[`BpkImage should render correctly 1`] = `
<DocumentFragment>
  <div>
    <div
      class="bpk-image bpk-image--no-background"
      style="height: 0px; padding-bottom: 66.66666666666667%;"
    >
      <img
        alt="image description"
        class="bpk-image__img"
        src="./path/to/image.jpg"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkImage should render correctly using legacy width and height props 1`] = `
<DocumentFragment>
  <div>
    <div
      class="bpk-image bpk-image--no-background"
      style="height: 0px; padding-bottom: 66.66666666666667%;"
    >
      <img
        alt="image description"
        class="bpk-image__img"
        src="./path/to/image.jpg"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkImage should support srcSet 1`] = `
<DocumentFragment>
  <div>
    <div
      class="bpk-image bpk-image--no-background"
      style="height: 0px; padding-bottom: 66.66666666666667%;"
    >
      <img
        alt="image description"
        class="bpk-image__img"
        sizes="(min-width: 71.25rem) 48rem, (min-width: 50.25rem) calc(100vw - 18rem), calc(100vw - 4.5rem)"
        src="./path/to/image_1640.jpg"
        srcset="./path/to/image_320px.jpg 320w, ./path/to/image_640px.jpg 640w, ./path/to/image_1640px.jpg 1640w, ./path/to/image_3200px.jpg 3200w"
      />
    </div>
  </div>
</DocumentFragment>
`;
